ReSharper.FSharp/test/data/parsing/errors/Type member - Identifier 04.fs
type T() =
    x

    member this.P = ()
